--- a/client/App.css
+++ b/client/App.css
@@ -116,19 +116,15 @@
   color: #dc2626;
 }
 
-/* RecipeInstructions */
-.RecipeInstructions {
+/* EditRecipe */
+.EditRecipe {
   display: flex;
   flex-direction: column;
 }
 
-.RecipeInstructions > .image-container {
+.EditRecipe > .image-container {
   max-width: 400px;
   max-height: 100%;
-}
-
-.instructions-list {
-  padding: 24px;
 }
 
 /* CreateRecipe */
