--- a/client/App.css
+++ b/client/App.css
@@ -2,7 +2,7 @@
   --bg-accent: rgb(22 163 74);
   --white: rgb(241 245 249);
   --black: rgb(3 7 18);
-  --box-shadow: 0 0 8px rgb(0 0 0 / 0.1);
+  --sky-blue: rgb(14 165 233);
 }
 
 /* App */
@@ -32,7 +32,7 @@
 /* NavBar */
 .NavBar {
   position: sticky;
-  background-color: rgb(29 78 216);
+  background-color: var(--sky-blue);
   color: rgb(241 245 249);
   box-shadow:
     0 4px 6px -1px rgb(0 0 0 / 0.1),
@@ -95,6 +95,24 @@
 
 .options-hidden {
   display: none;
+}
+
+.recipe-actions {
+  margin: 8px;
+  padding: 8px;
+}
+
+.recipe-action {
+  background-color: rgb(14 165 233);
+  color: var(--white);
+  margin: 4px 8px;
+  padding: 8px;
+  text-decoration: none;
+  box-shadow: 0 0 8px rgb(0 0 0 / 0.1);
+}
+
+.recipe-action:hover {
+  box-shadow: 0 0 12px rgb(0 0 0 / 0.1);
 }
 
 .recipe-option {
@@ -184,17 +202,13 @@
   padding: 8px;
 }
 
-.submit-btn {
+.submit {
   background-color: var(--bg-accent);
-  border: none;
-  box-shadow: var(--box-shadow);
   color: var(--white);
-  padding: 12px 16px;
 }
 
-.submit-btn:hover {
+.submit:hover {
   background-color: rgb(34 197 94);
-  cursor: pointer;
 }
 
 .error-message {
