--- a/client/index.css
+++ b/client/index.css
@@ -5,11 +5,18 @@
 }
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  background-color: rgb(167 243 208);
+  --bg-color: rgb(167 243 208);
+  --green: rgb(22 163 74);
+  --sky-blue: rgb(14 165 233);
+  --white: rgb(241 245 249);
+  --black: rgb(3 7 18);
+  --red: rgb(239 68 68);
+  --box-shadow: 0 0 8px rgb(0 0 0 / 0.1);
 }
 
 #root {
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  background-color: var(--bg-color);
   position: relative;
   min-height: 100vh;
 }
@@ -19,10 +26,10 @@ p {
 }
 
 .card {
-  background-color: rgb(241 245 249);
+  background-color: var(--white);
   padding: 8px 12px;
   margin: 8px;
-  box-shadow: 0 0 8px rgb(0 0 0 / 0.1);
+  box-shadow: var(--box-shadow);
   transition: box-shadow 0.6s ease;
 }
 
@@ -32,7 +39,7 @@ p {
 
 .btn {
   border: none;
-  box-shadow: 0 0 8px rgb(0 0 0 / 0.1);
+  box-shadow: var(--box-shadow);
   padding: 8px 6px;
   margin: 4px;
 }
