--- a/client/EditRecipe.css
+++ b/client/EditRecipe.css
@@ -7,3 +7,14 @@
   max-width: 400px;
   max-height: 100%;
 }
+
+.recipe-description {
+  min-width: 400px;
+}
+
+.image-upload::file-selector-button {
+  border: none;
+  padding: 8px;
+  color: var(--white);
+  background-color: var(--green);
+}
