Create modal for confirming recipe deletion

--- a/client/Recipe.css
+++ b/client/Recipe.css
@@ -26,25 +26,19 @@
 .recipe-action {
   background-color: rgb(14 165 233);
   color: var(--white);
-  margin: 4px 8px;
-  padding: 8px;
-  text-decoration: none;
-  box-shadow: 0 0 8px rgb(0 0 0 / 0.1);
-}
-
-.recipe-action:hover {
-  box-shadow: 0 0 12px rgb(0 0 0 / 0.1);
+  text-decoration: none;  
 }
 
 .recipe-option {
-  list-style-type: none;
   background-color: rgb(226 232 240);
-  padding: 4px;
-  margin-bottom: 4px;
+  list-style-type: none;  
+  margin: 8px;
+/*  padding: 4px;
+  margin-bottom: 4px;*/
 }
 
 .recipe-option > a {
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 .edit {
