--- a/client/Recipe.css
+++ b/client/Recipe.css
@@ -24,7 +24,7 @@
 }
 
 .recipe-action {
-  background-color: rgb(14 165 233);
+  background-color: var(--sky-blue);
   color: var(--white);
   text-decoration: none;  
 }
@@ -32,17 +32,22 @@
 .recipe-option {
   background-color: rgb(226 232 240);
   list-style-type: none;  
-  margin: 8px;
-/*  padding: 4px;
-  margin-bottom: 4px;*/
+  padding: 0;
+  margin: 4px 0;
 }
 
 .recipe-option > a {
+  display: block;
+  padding: 8px 16px;
   text-decoration: none;
 }
 
+.recipe-option > a:hover {
+  cursor: pointer;
+}
+
 .edit {
-  color: rgb(3 105 161);
+  color: var(--sky-blue);
 }
 
 .edit:hover {
