--- a/client/Recipe.css
+++ b/client/Recipe.css
@@ -1,11 +1,19 @@
 .Recipe {
-  text-align: center;
   max-width: 400px;
 }
 
-.recipe-name,
-.more-options {
+.heading-container {
+  padding: 4px 0;
+  text-align: center;
+}
+
+.recipe-name {
   display: inline;
+}
+
+.description {
+  max-width: 100%;
+  padding: 8px 0;
 }
 
 .more-options {
@@ -18,9 +26,8 @@
   cursor: pointer;
 }
 
-.recipe-actions {
-  margin: 8px;
-  padding: 8px;
+.recipe-action.btn {
+  margin: 0;
 }
 
 .recipe-action {
@@ -62,8 +69,4 @@
 
 .delete {
   color: var(--red);
-}
-
-.image-container {
-  padding: 8px;
 }
