Add basic skeleton for recipe ingredients page

--- a/client/App.css
+++ b/client/App.css
@@ -8,7 +8,6 @@
 .recipe-cards {
   display: flex;
   align-items: flex-start;
-  justify-content: center;
   flex-wrap: wrap;
-  padding: 16px 0;
+  padding: 16px;
 }
